# keygen_licensing_tools

./: .gitignore  README.md  setup.cfg
src/keygen_licensing_tools/: _exceptions.py  _helpers.py  _main.py  _offline_keys.py
tests/: test_validation.py
