[metadata]
name = keygen_licensing_tools
version = 0.0.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Best practices for Python projects
url = https://github.com/nschloe/keygen_licensing_tools
project_urls =
    Code=https://github.com/nschloe/keygen_licensing_tools
    Issues=https://github.com/nschloe/keygen_licensing_tools/issues
    # "Documentation": "https://packaging.python.org/tutorials/distributing-packages/",
    # "Funding": "https://donate.pypi.org",
    # "Say Thanks!": "http://saythanks.io/to/example",
    # "Source": "https://github.com/pypa/sampleproject/",
    # "Tracker": "https://github.com/pypa/sampleproject/issues",
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    requests
    ed25519
    rich # TODO remove
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    keygen_licensing_tools-show = keygen_licensing_tools.cli:show
